# erpverein

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  spec.md
.github/workflows/: build-image.yml
erpverein/: custom_fields.py  hooks.py  install.py  modules.txt  patches.txt  setup_data.py  uninstall.py
erpverein/api/: mieter_customer_sync.py  mitglied_customer_sync.py  rental_subscription_generation.py  sepa_mandat.py  subscription_generation.py
erpverein/services/: billing_common.py  billing_job_service.py  billing_run_service.py  customer_sync_service.py  mieter_customer_sync_service.py  mieter_service.py  mitglied_service.py  rental_subscription_generation_service.py  sepa_collection_schedule_service.py  sepa_mandat_service.py  subscription_generation_service.py
erpverein/tests/: before_tests.py  test_billing_common.py  test_custom_fields.py  test_customer_sync_service.py  test_doctype_modules.py  test_mieter_doctype.py  test_mitglied_doctype.py  test_mitglied_service.py  test_package_release_identity.py  test_patch_p0001_sync_app_state.py  test_rental_subscription_generation_doctype.py  test_rental_subscription_generation_service.py  test_sepa_collection_schedule_service.py  test_sepa_mandat_doctype.py  test_sepa_mandat_service.py  test_setup_data.py  test_startseite_workspace.py  test_subscription_generation_doctype.py  test_subscription_generation_service.py  test_vereinsverwaltung_workspace.py
erpverein/workspace_sidebar/: startseite.json  (+1 more)
verein_erp/: custom_fields.py  hooks.py  install.py  modules.txt  patches.txt  setup_data.py  uninstall.py
(+108 files in other folders)
