[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verein_erp"
version = "0.1.2"
description = "ERPNext custom app for simple Vereinsverwaltung"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["verein_erp*"]

[tool.setuptools.package-data]
verein_erp = ["**/*.json", "**/*.js", "*.txt"]
