[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "erpverein"
version = "0.1.2"
description = "ERPverein custom app for simple Vereinsverwaltung on ERPNext"
requires-python = ">=3.14,<3.15"
readme = "README.md"
license = { text = "MIT" }

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["erpverein*"]

[tool.setuptools.package-data]
erpverein = ["**/*.json", "**/*.js", "*.txt"]
